# fluxome

./: .gitignore  LICENSE  README.md  SPECIFICATION.md  mkdocs.yml  noxfile.py  pyproject.toml
docs/reference/: fluxome.md  igtme.md
scripts/: concat_counts_semrau.py  semrau_data_cluster_08262025.py  star_index.sh  star_runs.sh
src/fluxome/: __init__.py  __main__.py
src/fluxome/cli/: __init__.py
src/igtme/: __about__.py  __main__.py
src/igtme/cli/: __init__.py
src/tests/: __init__.py
testing/: evo_process_model_training.ipynb  evo_process_model_training.py  evo_process_model_training_genotypeOnly.ipynb  evo_process_model_training_genotypeOnly.md  evo_process_model_training_genotypeOnly.py  evo_process_model_training_genotypeOnlyTensorized+fitness.ipynb  evo_process_model_training_genotypeOnlyTensorized.ipynb
testing/prototype/: evo_process_model_training.ipynb  evo_process_model_training.md  evo_process_model_training.py  evo_process_model_training_genotypeOnly.ipynb  evo_process_model_training_genotypeOnly.py  evo_process_model_training_genotypeOnlyTensorized+fitness.ipynb  evo_process_model_training_genotypeOnlyTensorized.ipynb
testing/wft/matlab/: model.mat  model_continuous.mat  mvnpdf_log.m  test_wright_fisher_model.m  train_wright_fisher_model.m  visualize_model.m  wright_fisher_bwd.m  wright_fisher_fwd.m
testing/wright-fisher/multi-locus/matlab/: model.mat  test_wright_fisher_model.m  train_wright_fisher_model.m  visualize_model.m  wright_fisher_bwd.m  wright_fisher_fwd.m
testing/wright-fisher/multi-locus/python/: wright_fisher.ipynb  wright_fisher.md  wright_fisher.py
testing/wright-fisher/single-locus/: fisher_wright_bwd.m  fisher_wright_fwd.m  test_fisher_wright_model.m  train_fisher_wright_model.m
tests/: test_add.py  test_main.py
