[tool.poetry]
name = "igtme"
version = "0.0.0"
description = "Inference of Genome-Transcriptome Map Evolution"
authors = [
    "Jonathan Warrell <jonathan.warrell@gmail.com>",
    "Cameron Smith <cameron.ray.smith@gmail.com>"
]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/cameronraysmith/iGTme"
repository = "https://github.com/cameronraysmith/iGTme"
keywords = ["probabilistic modeling", "genomics", "transcriptomics", "evolution"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
numpy = "^1.23.4"

[tool.poetry.scripts]
igtme = "igtme.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["igtme"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
