[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  # "ARG",
  # "B",
  "C",
  "DTZ",
  # "E",
  "EM",
  # "F",
  # "FBT",
  "I",
  "ICN",
  "ISC",
  # "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  # "S",
  # "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["igtme"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.pytest.ini_options]
addopts = "--cov=src/igtme/ --cov-report=term-missing"
asyncio_mode = "strict"

[tool.coverage.run]
source_pkgs = ["igtme", "tests"]
branch = true
parallel = true
omit = [
  "src/igtme/__about__.py",
]

[tool.coverage.paths]
igtme = ["src/igtme", "*/igtme/src/igtme"]
tests = ["tests", "*/igtme/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/igtme/__about__.py"

[tool.hatch.envs.default]
python = "3.10"
dependencies = [
    "black[jupyter]",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "xdoctest",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
test = "pytest -rA"
test-cov-xml = "pytest -rA --cov-report=xml"
lint = [
  "black .",
  "ruff --fix .",
  "mypy src/igtme/",
]
lint-check = [
  "black --check .",
  "ruff .",
  "mypy src/igtme/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "igtme"
authors = [
  { name = "igtme", email = "igtme@biotheorylab.net" },
  { name = "Cameron Smith", email = "cameron.ray.smith@gmail.com" },
  { name = "Jonathan Warrell", email = "jonathan.warrell@gmail.com" },
]
description = "integrated probabilistic modeling of stochastic gene regulatory networks and cell state trajectories"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = [
  "click",
]

[project.scripts]
igtme = "igtme.cli:igtme"

[project.urls]
Documentation = "https://biotheorylab.github.io/igtme/"
Issues = "https://github.com/biotheorylab/igtme/issues"
Source = "https://github.com/biotheorylab/igtme"
